--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@angular/language-service": "^5.1.1",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
+    "@types/marked": "^0.3.0",
     "@types/node": "~6.0.60",
     "codelyzer": "~3.0.1",
     "gh-pages": "^1.0.0",
